add: integration with the Defendable interface for WarMachine, Creature and BattleUnit fix: test integrity